# SlicerMultiverSeg

./: .gitignore  CMakeLists.txt  README.md
.github/actions/install-slicer/: action.yml  downloader.sh  macos_installer.exp
.github/actions/slicer-install-extensions/: action.yml  install_extensions.py
.github/actions/slicer-install-python-packages/: action.yml  install_py_packages.py
.github/actions/slicer-run-python-script/: action.yml
.github/actions/slicer-run-python-tests/: action.yml  run_tests.py
.github/python_scripts/: install_python_dependencies.py  install_pytorch_module.py
.github/workflows/: windows-testing.yml
MultiverSeg/: CMakeLists.txt  SegmentEditorMultiverSeg.py
MultiverSeg/SegmentEditorMultiverSegLib/: ContextLogic.py  InstallLogic.py  SegmentEditorEffect.py  SegmentationLogic.py
MultiverSeg/Testing/: CMakeLists.txt
MultiverSeg/Testing/Python/: CMakeLists.txt  ContextLogicTestCase.py  EffectUITestCase.py  SegmentationLogicTestCase.py
SegmentEditorMultiverSeg/: CMakeLists.txt  SegmentEditorMultiverSeg.py  requirementsMultiSeg.txt
SegmentEditorMultiverSeg/Resources/UI/: SegmentEditorMultiverSeg.ui
SegmentEditorMultiverSeg/SegmentEditorMultiverSegLib/: ContextLogic.py  InstallLogic.py  SegmentEditorEffect.py  SegmentationLogic.py  __init__.py
SegmentEditorMultiverSeg/Testing/Python/: ContextLogicTestCase.py  EffectUITestCase.py  SegmentationLogicTestCase.py
SegmentEditorMultiverSeg/Testing/TestData/SlicerData/: 1.seg.nrrd
